<resources>
    <string name="app_name">YCDesk Server</string>
    <string name="notification_title">YCDesk Server</string>
    <string name="notification_text">信令服务器运行中</string>
    <string name="status_stopped">未启动</string>
    <string name="status_running">运行中</string>
    <string name="btn_start">启动服务器</string>
    <string name="btn_stop">停止服务器</string>
    <string name="mode_http">HTTP / WS</string>
    <string name="mode_https">HTTPS / WSS</string>
    <string name="log_title">运行日志</string>
    <string name="server_stopped">服务器未启动</string>
    <string name="port">端口：</string>
    <string name="use_https">使用 HTTPS</string>
    <string name="start_server">启动服务器</string>
</resources>
